--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
                         <span class="name">{{ site.title }}</span>
-                        <hr class="star-light">
+                        <hr class="light fa-star">
                         <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
                     </div>
                 </div>
