Modular page content w/ customizable icon

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
-                    <hr class="light fa-star">
+                    <hr class="light fa-{{ include.icon }}">
                 </div>
             </div>
             <div class="row">
