--- a/_includes/contact_static.html
+++ b/_includes/contact_static.html
@@ -4,7 +4,7 @@
 		<div class="row">
 			<div class="col-lg-12 text-center">
 				<h2>Contact Me</h2>
-				<hr class="primary fa-star">
+				<hr class="primary fa-{{ include.icon }}">
 			</div>
 		</div>
 		<div class="row">
