--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Portfolio</h2>
-                    <hr class="primary fa-star">
+                    <hr class="primary fa-{{ include.icon }}">
                 </div>
             </div>
             <div class="row">
