--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,14 +4,13 @@
     <body id="page-top" class="index">
     {% include nav.html %}
     {% include header.html %}
-    {% include portfolio_grid.html %}
-    {% include about.html %}
-
-    {% if site.contact == "static" %}
-    {% include contact_static.html %}
-    {% else %}
-    {% include contact.html %}
-    {% endif %}
+    {% for part in site.content %}
+        {% if part.icon %}
+            {% include {{part.html}}.html icon=part.icon %}
+        {% else %}
+            {% include {{part.html}}.html icon="star" %}
+        {% endif %}
+    {% endfor %}
 
     {% include footer.html %}
     {% include modals.html %}
