--- a/_includes/js.html
+++ b/_includes/js.html
@@ -11,11 +11,13 @@
 
     <!-- Contact Form JavaScript -->
     <script src="{{ "/js/jqBootstrapValidation.js" }}"></script>
-    {% if site.contact == "static" %}
-    <script src="{{ "/js/contact_me_static.js" }}"></script>
-    {% else %}
-     <script src="{{ "/js/contact_me.js" }}"></script>
-    {% endif %}
+    {% for part in site.content %}
+        {% if part.html == "contact_static" %}
+            <script src="{{ "/js/contact_me_static.js" }}"></script>
+        {% elsif part.html == "contact" %}
+            <script src="{{ "/js/contact_me.js" }}"></script>
+        {% endif %}
+    {% endfor %}
 
     <!-- Custom Theme JavaScript -->
     <script src="{{ "/js/freelancer.js" }}"></script>
