--- a/_assets/stylesheets/style.scss
+++ b/_assets/stylesheets/style.scss
@@ -7,12 +7,16 @@ $site-color-secondary-dark: #233140;
 $brand-primary: $site-color-primary;
 $brand-success: $site-color-primary;
 $navbar-default-bg: $site-color-secondary;
-$navbar-default-color: #FFF;
-$navbar-default-link-color: #FFF;
+$navbar-default-color: #fff;
+$navbar-default-link-color: #fff;
 $navbar-default-link-hover-color: $site-color-primary;
 $navbar-default-link-active-color: $site-color-primary;
 $navbar-default-link-disabled-color: $site-color-primary;
+$navbar-default-brand-hover-color: $site-color-primary;
 $text-color: $site-color-secondary;
+$btn-default-color: #fff;
+$btn-default-bg: #95a5a6;
+$btn-default-border: #95a5a6;
 
 @import "_sass/_bootstrap";
 
@@ -222,7 +226,7 @@ section.success {
     width: 100%;
     height: 100%;
     opacity: 0;
-    background: rgba(24,188,156,.9);
+    background: rgba($site-color-primary, .8);
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
