--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">{{ site.title }}</a>
+                <a class="navbar-brand" href="#page-top">{% if site.nav-title %}{{ site.navtitle }}{% else %}{{ site.title }}{% endif %}</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -18,15 +18,11 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
+                    {% for part in site.content %}
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#{{ part.id }}">{{ part.navtitle }}</a>
                     </li>
-                    <li class="page-scroll">
-                        <a href="#about">About</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#contact">Contact</a>
-                    </li>
+                    {% endfor %}
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
