Modular homepage content and footer

--- a/_assets/stylesheets/style.scss
+++ b/_assets/stylesheets/style.scss
@@ -191,9 +191,14 @@ section h2 {
     font-size: 3em;
 }
 
-section.success {
+section.light {
     color: #fff;
     background: $site-color-primary;
+}
+
+section.primary {
+    color: $site-color-secondary;
+    background: #fff;
 }
 
 @media(max-width:767px) {
