Moved the images to assets folder

--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -14,7 +14,7 @@
                         <div class="modal-body">
                             <h2>{{ post.title }}</h2>
                             <hr class="primary fa-{{ post.icon }}">
-                            <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
+                            {{ post.img | prepend:'"portfolio/' | append:'" class="img-responsive img-centered" alt="' | append:post.alt | append:'"' | image }}
                             <p>{{ post.description }}</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
