--- a/_layouts/portfolio_grid.html
+++ b/_layouts/portfolio_grid.html
@@ -2,15 +2,16 @@
 layout: section
 ---
 <div class="row">
-    {% for post in site.posts %}
+    {% assign projects = (site.projects | sort: 'modal-id') %}
+    {% for project in projects %}
         <div class="col-sm-4 portfolio-item">
-            <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
+            <a href="#portfolioModal-{{ project.modal-id }}" class="portfolio-link" data-toggle="modal">
                 <div class="caption">
                     <div class="caption-content">
                         <i class="fa fa-search-plus fa-3x"></i>
                     </div>
                 </div>
-                {{ post.img | prepend:'"portfolio/' | append:'" class="img-responsive" alt="' | append:post.alt | append:'"' | image }}
+                {{ project.img | prepend:'"portfolio/' | append:'" class="img-responsive" alt="' | append:project.alt | append:'"' | image }}
             </a>
         </div>
     {% endfor %}
