--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
                     <div class="intro-text">
                         <span class="name">{{ site.title }}</span>
                         <hr class="light fa-star">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">{{ site.skills }}</span>
                     </div>
                 </div>
             </div>
