--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,15 @@
-    <!-- Header -->
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    {% image profile.png class="img-responsive" alt="profile" %}
-                    <div class="intro-text">
-                        <span class="name">{{ site.title }}</span>
-                        <hr class="light fa-star">
-                        <span class="skills">{{ site.skills }}</span>
-                    </div>
+<!-- Header -->
+<header>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                {% image profile.png class="img-responsive" alt="profile" id="profile-image" %}
+                <div class="intro-text">
+                    <span class="name">{{ site.title }}</span>
+                    <hr class="light fa-star">
+                    <span class="skills">{{ site.skills }}</span>
                 </div>
             </div>
         </div>
-    </header>
+    </div>
+</header>
