--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,8 +9,9 @@
 
     <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     {% stylesheet font-awesome %}
-    {% stylesheet style %}
-    {% stylesheet custom %}
+    {% stylesheet bootstrap %}
+    {% stylesheet freelancer %}
+    {% stylesheet customize_me %}
 
     <!-- Custom Fonts -->
     <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
