--- a/_config.scss
+++ b/_config.scss
@@ -1,5 +1,5 @@
 
-// Color settings (hex-codes without the leading hash-tag)
+// Color settings
 $site-color-primary: #18bc9c;
 $site-color-secondary: #2c3e50;
 $site-color-secondary-dark: #233140;
