--- a/_layouts/header.html
+++ b/_layouts/header.html
@@ -3,11 +3,13 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
+                {% if page.show-image %}
                 {% image profile.png class="img-responsive" alt="profile" id="profile-image" %}
+                {% endif %}
                 <div class="intro-text">
-                    <span class="name">{{ site.title }}</span>
-                    <hr class="light fa-star">
-                    <span class="skills">{{ site.skills }}</span>
+                    <span class="name">{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</span>
+                    <hr class="light fa-{{ page.icon }}">
+                    <span class="skills">{{ page.skills }}</span>
                 </div>
             </div>
         </div>
